Created OTP Validator on pass-gen.html

--- a/pass-gen.html
+++ b/pass-gen.html
@@ -111,9 +111,16 @@
         </div>
     </div>
 
-    <div class="otp-gen">
-      <h2>Generate a <br><span>One Time Password</span></h2>
+    <p class="otp-text">Check out our new One-Time Password Generator with a free embed code for your company website! <br>Verify emails quickly and free with the help of your LockSmith OTP Generator</p>
 
+
+    <div class="otp-gen">
+      <h3>OTP Validator</h3>
+      <p>Enter your email address here to recieve your One-Time Password</p>
+      <div class="display">
+        <input type="email" id="email-id" placeholder="Email Address">
+      </div>
+      <button class="nextButton">Submit</button>
     </div>
     
 
