--- a/pass-gen.html
+++ b/pass-gen.html
@@ -31,6 +31,11 @@
 <!-- For Font Awesome Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+<!-- For EmailJS -->
+<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+
 </head>
 
 <body class="pass-gen-body">
@@ -111,16 +116,41 @@
         </div>
     </div>
 
-    <p class="otp-text">Check out our new One-Time Password Generator with a free embed code for your company website! <br>Verify emails quickly and free with the help of your LockSmith OTP Generator</p>
+    <h3 class="otp-text" id="otp-text">Check out our One-Time Password Generator with a free embed code <br> for your company's website! Verify emails quickly and free <br>with the help of our LockSmith OTP Validator!</h3>
 
 
-    <div class="otp-gen">
+    <div class="otp-gen step1">
       <h3>OTP Validator</h3>
       <p>Enter your email address here to recieve your One-Time Password</p>
       <div class="display">
-        <input type="email" id="email-id" placeholder="Email Address">
+        <input type="email" id="emailId" placeholder="Email Address" onkeyup="validateEmail(this.value)">
       </div>
       <button class="nextButton">Submit</button>
+    </div>
+
+    <div class="otp-gen-step2" id="step2">
+      <h3>OTP Validator</h3>
+      <p>Enter One-Time Password sent to <span id="verifyEmail"></span> </p>
+
+<div class="otp-form">
+  <div class="otp-group">
+    <input type="number" />
+    <input type="number" />
+    <input type="number" />
+    <input type="number" />
+  </div>
+</div>     
+      <button class="verifyButton">Verify</button>
+      <p>
+        Not your Email / Didn't receive the code?
+        <a href=""javascript:void(0) onclick="changeMyEmail()">Resend code</a>
+      </p>
+    </div>
+
+    <div class="otp-gen step3">
+      <h3>Congratulations,</h3>
+      <img src="images/orange-tick.png">
+      <p>Your verification has successfully been completed!</p>
     </div>
     
 
@@ -141,12 +171,13 @@
     <div class="footer-col">
       <h4>Links</h4>
       <ul class="link-list">
-        <li><a href=""></a>Home</li>
-        <li><a href=""></a>Random Password Generator</li>
-        <li><a href=""></a>OTP Password Generator</li>
-        <li><a href=""></a>Password Game</li>
-        <li><a href=""></a>Password Manager</li>
-      </ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pass-gen.html">Random Password Generator</a></li>
+        <li><a href="pass-gen.html#otp-text">OTP Validator</a></li>
+        <li><a href="password-game.html">Password Game</a></li>
+        <li><a href="password-manager.html">Password Manager</a></li>
+    </ul>
+    
     </div>
     <div class="footer-col">
       <h4>Newsletter</h4>
