Added login and sign up functionalities

--- a/pass-gen.html
+++ b/pass-gen.html
@@ -57,7 +57,7 @@
                 <div class="nav-text">Password Generator</div></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="http://127.0.0.1:5500/password-game.html">
                 <div><i class="fa fa-gamepad" aria-hidden="true"></i></div>
                 <div>Password Game</div></a>
             </li>
