--- a/password-game.html
+++ b/password-game.html
@@ -53,7 +53,7 @@
               <div class="nav-text">Password Generator</div></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="http://127.0.0.1:5500/password-game.html">
               <div><i class="fa fa-gamepad" aria-hidden="true"></i></div>
               <div>Password Game</div></a>
           </li>
@@ -80,10 +80,14 @@
 
     <div class="game-box">
       <h1>Password Game</h1>
-      <p id="hints">Hints:</p>
+      <div class="game-text">
+        <p id="hints">Game Hints:</p>
+        <p id="message"></p>
+      </div>
       <input type="text" id="passwordInput" placeholder="Enter your password guess">
       <button onclick="checkPassword()">Submit</button>
-      <p id="message"></p>
+      
+      
   </div>
 
 </main>
