--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
       </div>
     </div>
     <div class="video-container">
-      <iframe width="853" height="480" src="https://www.youtube.com/embed/wH_OzsHXKmM" title="Louis Pascal - By My God. feat Patience Charles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
-    </div>
+      <iframe width="681" height="383" src="https://www.youtube.com/embed/Px7jU4JuPc0" title="Ruby&#39;s Introduction to the LockSmith App 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
     <div class="lower-section" id="aboutSection">
     <div class="home-about">
       <img class="about-img" src="images/About bg.jpg" alt="background with geometric shapes">
