--- a/login.html
+++ b/login.html
@@ -4,79 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LockSmith</title>
-
-    <!-- Installing CSS and bootstrap -->
-    <link rel="stylesheet" href="styles.css"> 
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <!-- For Favicon -->
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicon_io/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon_io/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon_io/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon_io/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
     <link rel="manifest" href="images/favicon_io/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="images/favicon_io/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
-    <!-- Installing Quicksand & Source Sans 3 Font -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-
-     
-<!-- For Font Awesome Icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="login-body">
 <div class="super-container" id="super-container">
     <div class="form-container sign-up">
-<form>
-        <h1>Create Account</h1>
+        <form>
+            <h1>Create Account</h1>
             <div class="social-icons">
-                <a href="#" class="icon" onclick="googleSignIn()"><i class="fa-brands fa-google-plus-g"></i></a>
-                <a href="#" class="icon" onclick="facebookSignIn()"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+                <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
             </div>
             <span>or use your email for registration</span>
             <input type="text" placeholder="Name">
             <input type="email" placeholder="Email">
             <input type="password" placeholder="Password">
             <button>Sign Up</button>
-</form>
+        </form>
     </div>
-
-        <div class="form-container sign-in">
-            <form>
+    <div class="form-container sign-in">
+        <form>
             <h1>Sign In</h1>
             <div class="social-icons">
-                <a href="#" class="icon" onclick="googleSignIn()"><i class="fa-brands fa-google-plus-g"></i></a>
-                <a href="#" class="icon" onclick="facebookSignIn()"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+                <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
             </div>
             <span>or use your email for registration</span>
             <input type="email" placeholder="Email">
             <input type="password" placeholder="Password">
             <a href="#">Forgot Password?</a>
             <button>Sign In</button>
-            </form>
-        </div>
-
-   <div class="toggle-container">
+        </form>
+    </div>
+    <div class="toggle-container">
         <div class="toggle">
-        <div class="toggle-panel toggle-left">
-            <h1>Welcome Back!</h1>
-            <p>Register with your personal details to use all of site features</p>
-            <button class="hidden" id="login">Sign In</button>
-        </div>
-        <div class="toggle-panel toggle-right">
-            <h1>Hello, Friend!</h1>
-            <p>Enter your personal details to use all of site features</p>
-            <button class="hidden" id="register">Sign Up</button>
+            <div class="toggle-panel toggle-left">
+                <h1>Welcome Back!</h1>
+                <p>Register with your personal details to use all of site features</p>
+                <button class="hidden" id="login">Sign In</button>
+            </div>
+            <div class="toggle-panel toggle-right">
+                <h1>Hello, Friend!</h1>
+                <p>Enter your personal details to use all of site features</p>
+                <button class="hidden" id="register">Sign Up</button>
+            </div>
         </div>
     </div>
-   </div>
 </div>
 <script type="module" src="login.js"></script>
 </body>
