--- a/login.html
+++ b/login.html
@@ -30,9 +30,9 @@
             </div>
             <span>or use your email for registration</span>
             <input type="text" placeholder="Name">
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
-            <button>Sign Up</button>
+            <input type="email" id="reg-email"  placeholder="Email">
+            <input type="password" id="reg-password" placeholder="Password">
+            <button id="email-register-btn">Sign Up</button>
         </form>
     </div>
     <div class="form-container sign-in">
@@ -43,10 +43,10 @@
                 <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
             </div>
             <span>or use your email for registration</span>
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
+            <input type="email" id="login-email" placeholder="Email">
+            <input type="password" id="login-password" placeholder="Password">
             <a href="#">Forgot Password?</a>
-            <button>Sign In</button>
+            <button id="email-login-btn">Sign In</button>
         </form>
     </div>
     <div class="toggle-container">
