Linked password manager page

--- a/password-game.html
+++ b/password-game.html
@@ -58,7 +58,7 @@
               <div>Password Game</div></a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="password-man.html">
                 <div><i class="fa fa-shield" aria-hidden="true"></i></div>
                 <div>Password Manager</div></a>
             </li>
@@ -124,7 +124,7 @@
           <li><a href="pass-gen.html">Random Password Generator</a></li>
           <li><a href="pass-gen.html#otp-text">OTP Validator</a></li>
           <li><a href="password-game.html">Password Game</a></li>
-          <li><a href="password-manager.html">Password Manager</a></li>
+          <li><a href="password-man.html">Password Manager</a></li>
       </ul>
       </div>
       <div class="footer-col">
